implement get party my tg id
